2006-05-23  David Makovský (Yakeen) <yakeen@sannyas-on.net> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorBuffer.cs: implementation of uppercase and lowercase actions
	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: update interface implementation
	* Extras/MonoDevelop.SourceEditor/MonoDevelop.SourceEditor.addin.xml: include these actions in context menu

2006-05-22 Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.SourceEditor.Gui/SourceEditorBuffer.cs: Removed
	  ICSharpCode.SharpRefactory dependency.

2006-05-05 Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor.Gui.OptionPanels/CodeTemplatePanel.cs:
	  Code Template Combobox was adding a new column to store after
	  each action. Fix for bug #78082 by Chris Wilson.

2006-05-04 Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor.addin.xml: Updated versions.
	* MonoDevelop.SourceEditor.mdp: Updated.

2006-04-19 Andrés G. Aragoneses  <knocte@gmail.com>

	* MonoDevelop.SourceEditor.FormattingStrategy/IndentStyle.cs: fixed typos.

2006-04-17 Andrés G. Aragoneses  <knocte@gmail.com>

	* MonoDevelop.SourceEditor.addin.xml: Added string to l10n and fixed a typo.

2006-04-07 Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.Codons/EditActionCodon.cs:
	* MonoDevelop.SourceEditor.addin.xml: Added documentation.

2006-04-03 Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs: Fix for
	  bug #77945.

2006-03-30 Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.addin.xml: Updated references.
	
2006-03-24 Lluis Sanchez Gual  <lluis@novell.com>   

	* MonoDevelop.SourceEditor.mdp: Updated.
	* Makefile.am: Use an unified format. Patch by Matze Braun.
	* MonoDevelop.SourceEditor.addin.xml: Updated add-in versions.

2006-03-16  Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs:
	Use new DocumentationService.
